fix context alignment in post types

--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -14,6 +14,9 @@
     background: #f4f4f4 none repeat scroll 0 0;
     border-left: 6px solid rgb(195, 0, 40);
 }
+#screen-options-wrap {
+  margin-left: 21px;
+}
 #contextual-help-back {
     background: #f4f4f4 none repeat scroll 0 0;
     left: 195px;
